eror_Cuenta.txt
Tarea_2/CuentaElementoPosicion.java:5: warning: A refining statement is required for statement specifications
        //@ requires secuencia != null;
            ^
Tarea_2/CuentaElementoPosicion.java:7: error: Incorrectly formed or terminated ensures statement near here
        //@ ensures \result == \count int i; 0 <= i < secuencia.length ; secuencia[i] == secuencia[k];
                                      ^
Tarea_2/CuentaElementoPosicion.java:7: error: not a statement
        //@ ensures \result == \count int i; 0 <= i < secuencia.length ; secuencia[i] == secuencia[k];
                                                    ^
Tarea_2/CuentaElementoPosicion.java:7: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ ensures \result == \count int i; 0 <= i < secuencia.length ; secuencia[i] == secuencia[k];
                                             ^
Tarea_2/CuentaElementoPosicion.java:7: error: not a statement
        //@ ensures \result == \count int i; 0 <= i < secuencia.length ; secuencia[i] == secuencia[k];
                                                                                      ^
Tarea_2/CuentaElementoPosicion.java:7: error: Expected a declaration or a JML construct inside the JML annotation here
        //@ ensures \result == \count int i; 0 <= i < secuencia.length ; secuencia[i] == secuencia[k];
                                                                         ^
5 errors
1 warning
